tests/fail/list_mixed_type.crema
int a[] = [1, 2.3, "foo"]
